05_registro_privado/ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app
  name: app
spec:
  replicas: 5
  selector:
    matchLabels:
      run: app
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
        - name: app
          image: dockerhub.arriaga.eu/nginx-hello:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: registry-1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: app
  name: app
  annotations:
    haproxy.org/check: "true"
    haproxy.org/forwarded-for: "true"
    haproxy.org/load-balance: "roundrobin"
spec:
  selector:
    run: app
  ports:
    - name: port-1
      port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - host: ciber-99.arriaga.eu
      http:
        paths:
          - path: /
            pathType: Prefix  # Exact
            backend:
              service:
                name: app
                port:
                  number: 80
